--- a/vaultaire-rest.cabal
+++ b/vaultaire-rest.cabal
@@ -25,6 +25,7 @@ Executable vaultaire-rest
     type-level,
     async,
     zeromq4-haskell,
+    transformers,
     protobuf
 
   if impl(ghc >= 6.12.0)
