--- a/vaultaire-rest.cabal
+++ b/vaultaire-rest.cabal
@@ -26,6 +26,8 @@ Executable vaultaire-rest
     async,
     zeromq4-haskell,
     transformers,
+    text,
+    aeson,
     protobuf
 
   if impl(ghc >= 6.12.0)
