--- a/vaultaire-rest.cabal
+++ b/vaultaire-rest.cabal
@@ -28,6 +28,11 @@ Executable vaultaire-rest
     transformers,
     text,
     aeson,
+    pipes,
+    vector,
+    attoparsec,
+    pipes-concurrency,
+    scientific,
     protobuf
 
   if impl(ghc >= 6.12.0)
