Rename executable "descartes"

--- a/descartes.cabal
+++ b/descartes.cabal
@@ -10,7 +10,7 @@ Category:            Web
 Build-type:          Simple
 Cabal-version:       >=1.2
 
-Executable vaultaire-rest
+Executable descartes
   hs-source-dirs: src
   main-is: Main.hs
 
