--- a/descartes.cabal
+++ b/descartes.cabal
@@ -42,3 +42,14 @@ Executable descartes
                  -fno-warn-unused-do-bind
   else
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
+
+test-suite             check
+  type:                exitcode-stdio-1.0
+  build-depends:       base >=4.6 && <4.7,
+                       bytestring,
+                       hspec,
+                       QuickCheck
+  hs-source-dirs:      tests
+  main-is:             check.hs
+  other-modules:       TestSuite
+  default-language:    Haskell2010
