Stupid aeson, fix types

--- a/descartes.cabal
+++ b/descartes.cabal
@@ -21,6 +21,7 @@ Executable descartes
     mtl                       >= 2     && < 3,
     snap-core                 >= 0.9   && < 0.11,
     snap-server               >= 0.9   && < 0.11,
+    aeson                     >= 0.7   && <= 0.8,
     cereal,
     type-level,
     async,
@@ -28,7 +29,6 @@ Executable descartes
     base64-bytestring,
     transformers,
     text,
-    aeson,
     pipes,
     vector,
     attoparsec,
