--- a/sieste.cabal
+++ b/sieste.cabal
@@ -23,6 +23,7 @@ Executable sieste
     snap-server               >= 0.9   && < 0.11,
     aeson                     >= 0.7   && <= 0.8,
     cereal,
+    vaultaire,
     type-level,
     async,
     zeromq4-haskell,
