--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: haskell
 env:
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.6.1 CABALVER=1.18'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.6.2 CABALVER=1.18'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.6.3 CABALVER=1.18'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.8.1 CABALVER=1.18'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.6.1 CABALVER=1.20'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.6.2 CABALVER=1.20'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.6.3 CABALVER=1.20'
-  - 'UBUNTU_RELEASE=saucy GHCVER=7.8.1 CABALVER=1.20'
+  - 'UBUNTU_RELEASE=saucy GHCVER=7.8.2 CABALVER=1.20'
+  - 'UBUNTU_RELEASE=saucy GHCVER=7.8.3 CABALVER=1.20'
+  - 'UBUNTU_RELEASE=saucy GHCVER=head CABALVER=1.20'
 
 before_install:
   - 'sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ ${UBUNTU_RELEASE} main universe"'
