--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,10 @@ before_install:
 install:
   - 'cabal-$CABALVER update'
   -  cabal sandbox init
-  -  git clone https://github.com/anchor/vaultaire.git ../vaultaire/
-  -  cabal sandbox add-source ../vaultaire
+  -  git clone https://github.com/anchor/marquise.git ../marquise/
+  -  git clone https://github.com/anchor/vaultaire-common.git ../vaultaire-common/
+  -  cabal sandbox add-source ../marquise/
+  -  cabal sandbox add-source ../vaultaire-common/
   - 'cabal-$CABALVER install --only-dependencies'
 
 script:
