--- a/sieste.cabal
+++ b/sieste.cabal
@@ -38,7 +38,8 @@ Executable sieste
     reinterpret-cast,
     lz4,
     clock,
-    protobuf
+    protobuf,
+    locators
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
