--- a/sieste.cabal
+++ b/sieste.cabal
@@ -1,5 +1,5 @@
 Name:                sieste
-Version:             0.3.1
+Version:             0.3.2
 Synopsis:            REST interface to vaultaire and chevalier
 Description:         REST interface to vaultaire and chevalier
 License:             BSD3
@@ -39,7 +39,8 @@ Executable sieste
     lz4,
     clock,
     protobuf,
-    locators
+    locators,
+    chevalier-common
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
