--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,10 @@ install:
   -  cabal sandbox init
   -  git clone https://github.com/anchor/marquise.git ../marquise/
   -  git clone https://github.com/anchor/vaultaire-common.git ../vaultaire-common/
+  -  git clone https://github.com/anchor/chevalier-common.git ../chevalier-common/
   -  cabal sandbox add-source ../marquise/
   -  cabal sandbox add-source ../vaultaire-common/
+  -  cabal sandbox add-source ../chevalier-common/
   - 'cabal-$CABALVER install --only-dependencies'
 
 script:
