--- a/sieste.cabal
+++ b/sieste.cabal
@@ -40,7 +40,7 @@ Executable sieste
     clock,
     protobuf,
     locators,
-    chevalier-common
+    chevalier-common          >= 0.5
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
