--- a/sieste.cabal
+++ b/sieste.cabal
@@ -21,7 +21,7 @@ Executable sieste
     mtl                       >= 2     && < 3,
     snap-core                 >= 0.9   && < 0.11,
     snap-server               >= 0.9   && < 0.11,
-    aeson                     >= 0.7   && <= 0.8,
+    aeson                     >= 0.7,
     cereal,
     marquise,
     async,
